[gd_scene load_steps=38 format=2]

[ext_resource path="res://BraveEightyoneRegular-ZVGvm.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/CornerTile.png" type="Texture" id=2]
[ext_resource path="res://sprites/Wall_tile.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons.png" type="Texture" id=4]
[ext_resource path="res://Caged.wav" type="AudioStream" id=5]
[ext_resource path="res://sprites/buttonBoxs.png" type="Texture" id=6]
[ext_resource path="res://sprites/BlueEnter.png" type="Texture" id=7]
[ext_resource path="res://sprites/OrangeEnter.png" type="Texture" id=8]
[ext_resource path="res://sprites/tile.png" type="Texture" id=9]
[ext_resource path="res://sprites/exit.png" type="Texture" id=10]
[ext_resource path="res://sprites/Non_movable Box.png" type="Texture" id=11]
[ext_resource path="res://Double finish.wav" type="AudioStream" id=12]
[ext_resource path="res://sprites/going through exit.png" type="Texture" id=13]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=14]
[ext_resource path="res://RobotB.tscn" type="PackedScene" id=15]
[ext_resource path="res://Exit.tscn" type="PackedScene" id=16]
[ext_resource path="res://RobotO.tscn" type="PackedScene" id=17]
[ext_resource path="res://Exit.gd" type="Script" id=18]
[ext_resource path="res://Pause.gd" type="Script" id=19]
[ext_resource path="res://RedButtonBox l8.gd" type="Script" id=20]
[ext_resource path="res://RobotO.gd" type="Script" id=21]
[ext_resource path="res://blueButtonBox2 l8.gd" type="Script" id=22]
[ext_resource path="res://RobotB.gd" type="Script" id=23]
[ext_resource path="res://Level8.gd" type="Script" id=24]
[ext_resource path="res://Single finish.wav" type="AudioStream" id=25]

[sub_resource type="Animation" id=9]
resource_name = "move"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 240 ), Vector2( 192, 240 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 256.001, 256 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 384.001, 384 )

[sub_resource type="Animation" id=14]
resource_name = "move"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192.128, 176 ), Vector2( 128, 176 ) ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 256, 256 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 256, 256 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 232 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=8]
size = 43
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=16]
resource_name = "PlusMad"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Level8" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiles" type="Node2D" parent="."]
position = Vector2( 24, 16 )

[node name="side1" type="Node2D" parent="tiles"]

[node name="WTile" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 176 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile11" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 240 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile12" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 304 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile5" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile9" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile10" type="Sprite" parent="tiles/side1"]
position = Vector2( 320, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="WTile6" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="WTile7" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 11 )
offset = Vector2( 512, 512 )

[node name="WTile8" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="Tile" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile5" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile6" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 11 )
offset = Vector2( 512, 512 )

[node name="Tile7" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile8" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile9" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="CTile" type="Sprite" parent="tiles/side1"]
position = Vector2( 96, 80 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 96, 336 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 352, 80 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 352, 336 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="RedButtonBox" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 240 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )
vframes = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="tiles/side1/RedButtonBox"]
playback_speed = 2.0
anims/move = SubResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="tiles/side1/RedButtonBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles/side1/RedButtonBox/StaticBody2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="tiles/side1/RedButtonBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles/side1/RedButtonBox/Area2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 3 )

[node name="RedButtonBox2" type="Sprite" parent="tiles/side1"]
position = Vector2( 192.128, 176 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )
vframes = 2
frame = 1
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="tiles/side1/RedButtonBox2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles/side1/RedButtonBox2/StaticBody2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="tiles/side1/RedButtonBox2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles/side1/RedButtonBox2/Area2D"]
position = Vector2( 512.002, 511.998 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="tiles/side1/RedButtonBox2"]
playback_speed = 2.0
anims/move = SubResource( 14 )

[node name="Exit" type="Node2D" parent="tiles/side1" instance=ExtResource( 16 )]
position = Vector2( 64, 368 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}
light = ExtResource( 13 )
non_light = ExtResource( 10 )

[node name="Enter" type="Sprite" parent="tiles/side1"]
position = Vector2( 288, 16 )
scale = Vector2( 0.06225, 0.063 )
texture = ExtResource( 8 )
hframes = 2
vframes = 2
frame = 2

[node name="tiles2" type="Node2D" parent="."]
position = Vector2( 552, 16 )

[node name="side1" type="Node2D" parent="tiles2"]

[node name="WTile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 176 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile11" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 240 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile12" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 304 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile5" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile9" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile10" type="Sprite" parent="tiles2/side1"]
position = Vector2( 320, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile6" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="WTile7" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 368 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 4 )
offset = Vector2( 512, 512 )
hframes = 4
vframes = 5
frame = 8
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="tiles2/side1/WTile7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles2/side1/WTile7/Area2D"]
position = Vector2( 511.998, 512.001 )
shape = SubResource( 10 )

[node name="WTile8" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192.128, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 4 )
offset = Vector2( 512, 512 )
hframes = 4
vframes = 5

[node name="Area2D" type="Area2D" parent="tiles2/side1/WTile3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiles2/side1/WTile3/Area2D"]
position = Vector2( 512, 512 )
shape = SubResource( 11 )

[node name="Tile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile5" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile6" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile7" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile8" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="Tile9" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )
offset = Vector2( 512, 512 )

[node name="CTile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 352, 80 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 96, 336 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 96, 80 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 289.5, 336.4 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 9 )

[node name="Exit" type="Node2D" parent="tiles2/side1" instance=ExtResource( 16 )]
position = Vector2( 192, 432 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}
exit = 2
light = ExtResource( 13 )
non_light = ExtResource( 10 )

[node name="Enter2" type="Sprite" parent="tiles2"]
position = Vector2( 288, 400 )
scale = Vector2( 0.06225, 0.063 )
texture = ExtResource( 7 )
hframes = 2
vframes = 2

[node name="OOB" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OOB"]
position = Vector2( 80, 88 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OOB"]
position = Vector2( 416, 192 )
shape = SubResource( 12 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OOB"]
position = Vector2( 592, -44.8 )
shape = SubResource( 12 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OOB"]
position = Vector2( 944, 192 )
shape = SubResource( 12 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="OOB"]
position = Vector2( 816, -168 )
shape = SubResource( 12 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="OOB"]
position = Vector2( 736, -168 )
shape = SubResource( 12 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="OOB"]
position = Vector2( 672, 616 )
shape = SubResource( 12 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="OOB"]
position = Vector2( 592, 404.1 )
shape = SubResource( 12 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="OOB"]
position = Vector2( 16, 448 )
shape = SubResource( 12 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="OOB"]
position = Vector2( 56, 88 )
shape = SubResource( 12 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="OOB"]
position = Vector2( 352, -168 )
shape = SubResource( 12 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="OOB"]
position = Vector2( 272, -168 )
shape = SubResource( 12 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="OOB"]
position = Vector2( 1040, 56 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="OOB"]
position = Vector2( 576, 56 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="OOB"]
position = Vector2( 328, -12.2 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="OOB"]
position = Vector2( 48, 56 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="OOB"]
position = Vector2( -104, 397.686 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="OOB"]
position = Vector2( 456, 397.686 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="OOB"]
position = Vector2( 776, 456 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="OOB"]
position = Vector2( 792, 56 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="OOB"]
position = Vector2( 1104, 397.686 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="OOB"]
position = Vector2( 280, 397.686 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="OOB"]
position = Vector2( 248, 288 )
shape = SubResource( 7 )

[node name="CollisionShape2D24" type="CollisionShape2D" parent="OOB"]
position = Vector2( 248, 352.4 )
shape = SubResource( 7 )

[node name="CollisionShape2D26" type="CollisionShape2D" parent="OOB"]
position = Vector2( 777.5, 416 )
shape = SubResource( 13 )

[node name="CollisionShape2D27" type="CollisionShape2D" parent="OOB"]
position = Vector2( 892.7, 421 )
shape = SubResource( 13 )

[node name="RobotO" type="KinematicBody2D" parent="." instance=ExtResource( 17 )]
position = Vector2( 313.5, 37 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 21 )

[node name="RobotB" type="KinematicBody2D" parent="." instance=ExtResource( 15 )]
position = Vector2( 841.5, 421 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 23 )

[node name="World" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2( 512, 256 )
current = true
limit_left = -256
limit_top = -256
limit_right = 1280
limit_bottom = 856

[node name="Level" type="Label" parent="."]
margin_left = 376.0
margin_top = 112.0
margin_right = 642.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 8 )
text = "Level 8"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discription" type="Label" parent="."]
margin_left = -58.7745
margin_top = 397.686
margin_right = 1094.23
margin_bottom = 583.686
custom_fonts/font = SubResource( 8 )
text = "..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_timer" type="Timer" parent="."]
one_shot = true

[node name="Pause" type="CanvasLayer" parent="."]

[node name="Pause" type="Control" parent="Pause" instance=ExtResource( 14 )]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}
level = 8

[node name="DFinish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0
autoplay = true

[node name="SFinish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="Maddness" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 120.0
margin_top = 232.0
margin_right = 902.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 15 )
text = "+ MADDNESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Maddness"]
anims/PlusMad = SubResource( 16 )

[connection signal="body_entered" from="tiles/side1/RedButtonBox/Area2D" to="tiles/side1/RedButtonBox" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="tiles/side1/RedButtonBox2/Area2D" to="tiles/side1/RedButtonBox2" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="tiles2/side1/WTile7/Area2D" to="tiles/side1/RedButtonBox2" method="_on_Button_body_entered"]
[connection signal="body_exited" from="tiles2/side1/WTile7/Area2D" to="tiles/side1/RedButtonBox2" method="_on_Button_body_exited"]
[connection signal="body_entered" from="tiles2/side1/WTile3/Area2D" to="tiles/side1/RedButtonBox" method="_on_Button_body_entered"]
[connection signal="body_exited" from="tiles2/side1/WTile3/Area2D" to="tiles/side1/RedButtonBox" method="_on_Button_body_exited"]
[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
